java/spring/infrastructure/helm/spring-mvc-sql/pet-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-api-deployment
  labels:
    app: pet-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-api
  template:
    metadata:
      labels:
        app: pet-api
    spec:
      containers:
      - name: pet-api
        image: pets/pet-api
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pet-api-service
spec:
  selector:
    app: pet-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: pet-api
    http:  
      paths:  
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: pet-api-service
            port:
              number: 8080
